manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-app
  labels:
    app: market-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-app
  template:
    metadata:
      labels:
        app: market-app
    spec:
      containers:
      - name: market-app
        image: nicdevops/market-app:0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
