manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-app
spec:
  selector:
    app: market-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
